更换已过时方法